examples/web-stack/web-stack-foundation.yaml

apiVersion: network.hetzner.m.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: loadbalancer/v1alpha1/web-stack-foundation
  labels:
    testing.upbound.io/example-name: internet-egress
  name: internet-egress
  namespace: crossplane-system
spec:
  forProvider:
    destination: 0.0.0.0/0
    gateway: 10.42.1.10
    networkIdRef:
      name: web-stack-network

---

apiVersion: network.hetzner.m.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: loadbalancer/v1alpha1/web-stack-foundation
  labels:
    testing.upbound.io/example-name: office-route
  name: office-route
  namespace: crossplane-system
spec:
  forProvider:
    destination: 10.99.0.0/16
    gateway: 10.42.1.10
    networkIdRef:
      name: web-stack-network
